# Rag_ChatBot

./: FinSolve_Chatbot.postman_collection.json  Makefile  README.md  README1.md  pyproject.toml  setup_rag.py  test_chatbot.bat
app/: main.py
app/services/: rag_service.py
app/utils/: auth.py  logger.py
chroma_db/engineering/: chroma.sqlite3
chroma_db/finance/: chroma.sqlite3
chroma_db/general/: chroma.sqlite3
chroma_db/hr/: chroma.sqlite3
chroma_db/marketing/: chroma.sqlite3
chroma_db_general/: chroma.sqlite3
tests/: test_api.py
