[project]
name = "ds-rpc-01"
version = "0.1.0"
description = "Starter project for the RPC-01: Internal Chatbot with Role Based Access Control"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain>=0.1.0",
    "langchain-groq>=0.1.0",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "unstructured[md]>=0.10.0",
    "pandas>=2.0.0",
    "groq>=0.4.0",
]

[tool.setuptools.packages.find]
exclude = ["resources"]
